cargo-features = ["profile-rustflags"]
[package]
name = "pysearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[profile.release]
rustflags = ["-Copt-level=3", "-Cllvm-args=-unroll-threshold=100000"]

[features]
simd = []

[dependencies]
rayon = "1.7.0"
hashbrown = { version = "0.14.0" }
num-integer = "0.1.45"

# Doesn't seem to help much:
# [profile.release]
# lto = true
